@@ -26,7 +26,8 @@ enum {
     FILESELECT_VIDEO_AUDIO,
     FILESELECT_SUBTITLE,
     FILESELECT_AUDIO,
-    FILESELECT_FONT
+    FILESELECT_FONT,
+    FILESELECT_IMAGE
 };
 
 extern GtkWidget *FileSelector;
