@@ -152,6 +152,7 @@ enum
   evPlayCD,
   evPlayVCD,
   evPlayDVD,
+  evPlayImage,
   evLoadURL,
   evPlayTV,
   evPlaySwitchToPause,
